# tense

./: .gitignore  LICENSE  README.md
java/: HelloTense.c  HelloTense.h  HelloTense.java  build_notes
kernels/linux/: Kbuild  Makefile  main.c  mmap.c  sync-mp-spike-1.patch  sync-mp-spike.patch  tense.h  tense.patch
kernels/linux/configs/: .busybox_config  .kvm_config  .ubuntu_config
libtense/: CMakeLists.txt  Makefile  preload.c  tense.c  tense.h
libtense/test/: README  client_server.c  health_check_test.c  io.c  linux_time.c  nop_calibration.c  overhead.c  pthread_lock.c  pthread_test.c  tense_lock_loop.c  tense_lock_race.c  tense_move.c  tense_move_thread.c  tense_sleep.c  vtime_spin.c
libtense/test/single/: jump_lock.c  race.c  scale.c
libtense/test/util/: macros.h  minunit.h
notes/: API  design  implementation  parsec  timekeeper
